Fix missing border in Safari/Firefox

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -4,6 +4,7 @@
   width: 100%;
   padding: 0;
   border-spacing: 0;
+  border-collapse: separate;
   margin: 0;
 
   td .ratio {
@@ -145,7 +146,7 @@ table.subActionsDataTable td.label,
 table.actionsDataTable td.label {
   border-top: 0;
   border-left: 0;
-  position: sticky;
+  position: sticky; position: -webkit-sticky;
   left: 0;
   z-index: 1;
 }
